--- a/Feladat/feladat.html
+++ b/Feladat/feladat.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyiova Irina</title>
+
 </head>
-<body>
+<body style="background-color: blue;">
+    
     <h1>Tyiova Irina</h1>    
 
 </body>
