--- a/Feladat/feladat.html
+++ b/Feladat/feladat.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tyiova Irina</title>
+    <title>Tyitova Irina</title>
 
 </head>
 <body style="background-color: blue;">
     
-    <h1>Tyiova Irina</h1>    
+    <h1>Tyiova Irina</h1> 
+    <img src="https://th.bing.com/th/id/R.524fc9fd9aa71fb95bf962145ca07db1?rik=xL0CbWfXPCGVtQ&pid=ImgRaw&r=0" width=300>   
 
 </body>
 </html>
